# game

./: .gitignore  CMakeLists.txt  guideline.txt
src/: main.cpp
src/Input/: input.h  input_glfw.cpp
src/PlatformLayer/: platform.h  platform_glfw.cpp
src/Renderer/: camera.cpp  camera.h  shader.cpp  shader.h
